--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Raptor</string>
     <string name="title_activity_list">ListActivity</string>
+    <string name="title_activity_arc">ArcActivity</string>
+    <string name="title_activity_row">RowActivity</string>
 </resources>
